--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
       <li>Coffee</li>
       <li>Tea</li>
       <li>Milk</li>
-      <li>Butter</li>
+      <li>Butter and eggs</li>
       <li>add more...</li>
     </ul>
   </body>
